# yaaiotg

./: .gitignore  README.md  pyproject.toml
yaaiotg/: bot.py  callback.py  casts.py  dialog.py  dialog_action.py  dialog_control.py  types.py  utils.py
yaaiotg/log/: log.py  object_log.py
yaaiotg/userstorage/: __init__.py  base.py  in_memory_storage.py
