[tool.poetry]
name = "yaaiotg"
version = "0.1.0"
description = ""
authors = ["manitou <sibuk.harabudjasim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiotg = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
